# src/controllers/gameData/origin/index.js
@@ -3,7 +3,9 @@ const router = express.Router()
 
 const originCardsRouter = require('@controllers/gameData/origin/cards')
 const originToolsRouter = require('@controllers/gameData/origin/tools')
+const originPatches = require('@controllers/gameData/origin/patches')
 
+router.use('/patches', originPatches)
 router.use('/cards', originCardsRouter)
 router.use('/tools', originToolsRouter)
 
